ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "qa"
  namespace: "qa"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn:  arn:aws:acm:eu-central-1:0634324-b33c-73a0a56b4400
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
  labels:
    app: ingress-hosts
spec:
  rules:
    - host: k8s.solutions.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: "fghfg"
              servicePort: 80
